# ChangeLog for sys-cluster/heartbeat
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-cluster/heartbeat/ChangeLog,v 1.105 2014/06/16 09:55:59 ultrabug Exp $

*heartbeat-3.0.5-r2 (16 Jun 2014)

  16 Jun 2014; Ultrabug <ultrabug@gentoo.org> -heartbeat-3.0.5-r1.ebuild,
  +heartbeat-3.0.5-r2.ebuild, +files/3.0.5-fix_ucast.patch:
  fix #486186 thx to Zdravko Spoljar and Timothy Jones, drop broken

*heartbeat-3.0.5-r1 (29 Oct 2012)

  29 Oct 2012; Ultrabug <ultrabug@gentoo.org> +heartbeat-3.0.5-r1.ebuild,
  files/heartbeat-init:
  Fix init script vital directory creation wrt #438672 thx to Petric Frank.

  04 May 2012; Jeff Horelick <jdhore@gentoo.org> heartbeat-3.0.5.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  28 Dec 2011; Ultrabug <ultrabug@gentoo.org> files/3.0.4-fix_configure.patch,
  heartbeat-3.0.5.ebuild, metadata.xml:
  Ebuild cleanup, fix #387025, #387027 thanks to ago.

  18 Oct 2011; Kacper Kowalik <xarthisius@gentoo.org> -heartbeat-1.2.5.ebuild,
  -heartbeat-1.2.5-r1.ebuild, -heartbeat-2.0.7-r2.ebuild,
  -files/heartbeat-2.0.7-update-resources-failcount.patch,
  -heartbeat-2.0.8.ebuild, -files/heartbeat-2.0.8-asneeded.patch,
  -files/heartbeat-2.0.8-crm-assert.patch,
  -files/heartbeat-2.0.8-crm-leaks.patch, -files/heartbeat-2.0.8-delay.patch,
  -files/heartbeat-2.0.8-glibc.patch, -files/heartbeat-2.0.8-install_fix.patch,
  -heartbeat-3.0.4-r1.ebuild:
  Drop ancient and unusable versions of heartbeat-{1,2} since we have
  heartbeat-3 stable

  18 Oct 2011; Tony Vroon <chainsaw@gentoo.org> heartbeat-3.0.5.ebuild:
  Marked stable on AMD64 based on arch testing by Agostino "ago" Sarubbo & Ian
  "idella4" Delaney in bug #386955.

  18 Oct 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> heartbeat-3.0.5.ebuild:
  x86 stable wrt bug #386955

  17 Oct 2011; Jeroen Roovers <jer@gentoo.org> heartbeat-3.0.5.ebuild:
  Stable for HPPA (bug #386955).
