@@ -4,11 +4,11 @@ DESCRIPTION=Heartbeat high availability cluster manager
 EAPI=2
 HOMEPAGE=http://www.linux-ha.org/wiki/Heartbeat
 IUSE=doc snmp static-libs
-KEYWORDS=~amd64 ~hppa ~x86
+KEYWORDS=~amd64 hppa ~x86
 LICENSE=GPL-2
 PDEPEND=sys-cluster/resource-agents
 RDEPEND=sys-cluster/cluster-glue dev-libs/glib:2 virtual/ssh net-libs/gnutls snmp? ( net-analyzer/net-snmp ) =dev-lang/python-2*
 SLOT=0
 SRC_URI=http://hg.linux-ha.org/heartbeat-STABLE_3_0/archive/STABLE-3.0.5.tar.bz2
 _eclasses_=autotools	8fc2dd333ef9346c906ffd9a523d8211	base	87f7447ccfc06fd0729ff4684e11e0d6	eutils	998e5931fb95b10a6a11ec796ada2759	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	python	cd022f89fef846d083fc994b9e3d8c04	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac
-_md5_=97355cd914e55d0afcaac2efa875e8ed
+_md5_=fc599db5fcaaf03fd1e0bcf1b1545ff9
