@@ -7,14 +7,14 @@ AUX 3.0.4-python_tests.patch 464 SHA256 4adecb3af45c651bd28bc315e1e8607c2a1829a7
 AUX 3.0.5-fix_ucast.patch 4343 SHA256 f8a755ee17145ae1be2e870efaefa01ef3b414a0c32206296471a8d64d5b46ca SHA512 9eac05636bd72be663ab51085310f23ff506290000a8227b24be0efdaa2fb88a7868a848063311af91c0c151e73792a1e9a0ad33ab565f117f339ed6c3241b62 WHIRLPOOL 8f545697b1bcc7707f3e6e78508d5e8b5c99c5d4ec8d784277a653b69f1afbfc2edfe13e3459a97707f7414e752e92550d465b6b68794970341a0d1779fbcdaf
 AUX heartbeat-init 1829 SHA256 8df2337e77799fc43b4c5b9d4322201d26f96885c2e25dda0abaa57094764876 SHA512 5c6d48e854bafde8a80720ad8208120e0c58c438b8dbd2530a24e919ed57cdff06c0f09356082c803253e68ce4936583607e18c527a41aff361e7351f19706d5 WHIRLPOOL ee38abcd5f33bfc658e26e399250434dfb772655b9eb5502e05af3e90de22db32a8da4a5f5c446c195b31ac1452e8e633e5d0507c9dc82912f0a1f5762653b3e
 DIST STABLE-3.0.5.tar.bz2 538986 SHA256 fc7b11f9e1f16bc853434208a1ce86803acf1d0fb6f43715209a84c1c34661c3 SHA512 e38083b87c56a72eb8925ac42adeabb92618608e92218a63960ec0d0bca264f92a8e9c3ebfb0589cc4538da1a82b268b5cc9ee5a51ed33057c969e694e16b27d WHIRLPOOL 699c2679c38f17aacbf230dd68203a8967748c086713ad8bf55688b1e8933caf117ec2a8d2be2ec19b0fa077eacaa1cceec0fea14d181510abb24644a486f6c4
-EBUILD heartbeat-3.0.5-r2.ebuild 2074 SHA256 41b9186639b4dea2362659b66bd9feec096079184b4320750f87b30166a32596 SHA512 0de48d9fccd6e303ce49c7005d7438ac68b3dd12eb9f6f522b3dbd749a57dae31df1b15d710660423182897dc38a642df574b839af733bb82beee38f9a78346b WHIRLPOOL bf1affc09f249067c653a8762915c359bfbf8a39572fdadbbdd854bdc428a0d96ba1d0507a59b9e1b424635c2d827b9e77d0223f83ee10d95044e64ede09019e
+EBUILD heartbeat-3.0.5-r2.ebuild 2068 SHA256 f10633308b0996f45c4cedcb3c5e7c0d6d0b7a71630bec2c0cc8147e5a000a50 SHA512 ce0c8952cf0d8e6b5dcc7fb44bc079c2a3ffc810354e5ce4a3e27417d66da2a92dc6b45a32deb1b483e70139645cb665365ec4bd07ea591692f9bd355bb0c775 WHIRLPOOL 5ece890f38db0725cbe4715d7778cf4366c3a558ca30e257abed2c137c4ef8e166ef11fd79fed6d99cc648092131394ad2a2beb5e78061196a2b1a7c60a8ee0e
 EBUILD heartbeat-3.0.5.ebuild 2029 SHA256 41bd3c59c78cf11070c39d3f49bd1810211a46e7fecabc60bcc656dae5b5dc70 SHA512 1aa5305a9e71e6719f5503ee990b563f25bd1d2760faa358370f4c025eaca4b3a6652356d39d5f5c107de8e7c7567b9cb1f1d72c333b346ce5589da4a1416010 WHIRLPOOL f55688e54b7d034c335a711c3c159796677859e92deab70bfdbf8215506bd7b75d44d19edf8af88c2059970dffa480fe5e38f6c91c3906bef4592c7424ea46f8
-MISC ChangeLog 17699 SHA256 fb477a7648f1a66fb3355894f9e54d5795900122ebd86d0d2aa54acf553bc3bb SHA512 471a2baf50d8e2b4d0c4b292d3d15c9711e7fec43408863011a7d84e96b290055d99ba8be1c321367f5e6b509f56f07846eb545778d4a7560ece2465d3430953 WHIRLPOOL 65642564a8c25c192a4663012c63a1d087d5c04cafebb7cb2f993f5ea0571db4ac504636595c8fc8fd860c2429693184297df75e3b52eb3f39be4997ac286fbc
+MISC ChangeLog 17802 SHA256 f8a255de8fa912c2434a954a09107b1335d3cac2dd7636adc3ec47500e9bb283 SHA512 aa4793f3ec2b03a6e10c6911be8e1311102c7ce91a1e6c7202b892f6b87d9d8b78715bbeee489f87f0234ea6e69974bde4d1fcef819410a3300be21a1c319e33 WHIRLPOOL f54f88623921cf3b9661957d707a3fdb5c23082ff038ebecfb50b9166bb19cb14ad2b1367b9d5e3abc687f278c39f311f0b7240105e9df1e4ee328c4d6a139c3
 MISC metadata.xml 272 SHA256 5e1fe1f75603b05ad8e099bd10e1a7b6894baa1a6562471da4e0c87e3c2d378d SHA512 94a2917ffdbcae97bdf62d487868ded60f498b5cb11075ac89be835bf340df99f6dfabbff41ae4efe07235423db5fc7fee0c9f4d281c6d9a579ae2c1134e1047 WHIRLPOOL fc606d06d9f58d17b5709b7d0c5f4aa4afc5a6af56cc6eab663b899e2d54fe9429bbbf88d31104e724c9ef0d5c43048732de262a13742bf667efe5135b839fad
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iF4EAREIAAYFAlOevzUACgkQKiQSS7ZY+hOTyQEApr2SRM2F+VIogFDLonYZSQkg
-AwEpHr2EGTknLDqJwZABANRRgw95COPLuV2bU/k0j1AloWnEmeqLXi/BI6+YHYoW
-=FhjF
+iEYEAREIAAYFAlTfIZ0ACgkQVWmRsqeSphOLagCfYfp2JhF/5xyxq7nAFjFmxxfQ
+D3YAn2uO8NthrzyfVpfZLkYgMO3zR6nf
+=dNka
 -----END PGP SIGNATURE-----
